--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,9 @@
             <div>
               <h1 class="mb-0 h2">Q&A一覧</h1>
             </div>
+            <div>
+              <%= link_to "カテゴリからさがす", categories_path,data: {"turbolinks" => false}, class: "text-inherit" %>
+            </div>
           </div>
           <ul class="nav nav-lb-tab mb-4" id="tab" role="tablist">
             <li class="nav-item ml-0" role="presentation">
@@ -45,17 +48,15 @@
                           <% end %>
                           <div class="d-flex flex-row">
                             <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{post_open.category.root.name}/#{post_open.category.name}" %></li>
-                            <div id="like-icon-post-<%= post_open.id.to_s %>">
+                            <div class="ml-2"id="like-icon-post-<%= post_open.id.to_s %>">
                               <% if post_open.liked_by(current_user).present? %>
                                 <%= link_to "いいねを取り消す", post_like_path(post_open.id, post_open.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
                               <% else %>
                                 <%= link_to "いいね", post_likes_path(post_open), method: :POST, remote: true, class: "love hide-text" %>
                               <% end %>
                             </div>
-                            <div class="mt-1" id="like-text-post-<%= post_open.id.to_s %>">
-                              <span style="font-weight: bold;"><%= post_open.likes.count %></span>
-                            </div>
-                            <li class="list-inline-item"><i class="far fa-comment-alt ml-2 mt-2"></i></li>
+                            <li class="list-inline-item" style="font-weight: bold;"><%= post_open.likes.count %></li>
+                            <li class="list-inline-item"><i class="far fa-comment-alt ml-2"></i></li>
                           </div>
                         </div>
                       </div>
@@ -73,7 +74,7 @@
                 <%= link_to post_path(post_close),data: {"turbolinks" => false}, class: "text-inherit" do %>
                   <div class="card mb-5">
                     <div class="card-body pt-2 pb-2">
-                      <div class="d-flex align-items-center justify-content-between">
+                      <div class="d-flex align-items-center">
                         <div class="d-flex align-items-center justify-content-between flex-column">
                           <% if post_close.user.profile_image.present? %>
                             <%= image_tag post_close.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
@@ -86,17 +87,29 @@
                         <div class="ml-3 d-flex flex-column">
                           <h4 class="mb-1" style="font-weight: bold;"><%= post_close.title %></h4>
                           <p><%= post_close.content %></p>
-                        </div>
-                        <div style="margin-left: auto;">
                           <% if post_close.post_image.present? %>
-                            <%= image_tag post_close.post_image.url, class: "img-fluid", style:"height: 100px; width: auto; object-fit: cover;"%>
+                            <%= image_tag post_close.post_image.url, class: "img-fluid", style:"height: 200px; width: auto; object-fit: cover;"%>
                           <% end %>
+                          <div class="d-flex flex-row">
+                            <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{post_close.category.root.name}/#{post_close.category.name}" %></li>
+                            <div class="ml-2"id="like-icon-post-<%= post_close.id.to_s %>">
+                              <% if post_close.liked_by(current_user).present? %>
+                                <%= link_to "いいねを取り消す", post_like_path(post_close.id, post_close.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                              <% else %>
+                                <%= link_to "いいね", post_likes_path(post_close), method: :POST, remote: true, class: "love hide-text" %>
+                              <% end %>
+                            </div>
+                            <li class="list-inline-item" style="font-weight: bold;"><%= post_close.likes.count %></li>
+                            <li class="list-inline-item"><i class="far fa-comment-alt ml-2"></i></li>
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 <% end %>
                 <% end %>
+              <% else %>
+              <P>受付中の質問はありません</p>
               <% end %>
             </div>
           </div>
