--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,44 +2,44 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
-        <div class="card mb-5">
-          <div class="card-body">
-            <div class="d-flex align-items-center">
-              <div class="d-flex flex-column justify-content-between align-items-center mb-2">
-                <% if @post.user.profile_image.present? %>
-                <%= image_tag @post.user.profile_image.url, class: "rounded-circle avatar-md mb-2" %>
-                <% else %>
-                <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mb-2" %>
-                <% end %>
-                <div class="d-flex flex-column mb-2 text-center">
-                  <h4 class="mb-1"><%= @post.user.name %></h4>
-                  <span class="font-size-xs text-muted"><%= time_ago_in_words(@post.created_at) + "前" %></span>
+        <a>
+          <div class="card mb-5">
+            <div class="card-body">
+              <div class="d-flex align-items-center">
+                <div class="d-flex flex-column justify-content-between align-items-center mb-2">
+                  <% if @post.user.profile_image.present? %>
+                  <%= image_tag @post.user.profile_image.url, class: "rounded-circle avatar-md mb-2" %>
+                  <% else %>
+                  <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mb-2" %>
+                  <% end %>
+                  <div class="d-flex flex-column mb-2 text-center">
+                    <h4 class="mb-1"><%= @post.user.name %></h4>
+                    <span class="font-size-xs text-muted"><%= time_ago_in_words(@post.created_at) + "前" %></span>
+                  </div>
                 </div>
-              </div>
-              <div class="ml-3 d-flex flex-column">
-                <h4 class="mb-3" style="font-weight: bold;"><%= @post.title %></h4>
-                <p class="mb-3" style="font-weight: bold;"><%= @post.content %></p>
-                <% if @post.post_image.present? %>
-                  <%= image_tag @post.post_image.url, class: "img-fluid", style:"height: 200px; width: auto; object-fit: cover;"%>
-                <% end %>
-                <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{@post.category.root.name}/#{@post.category.name}" %></li>
-                <div class="d-flex flex-row">
-                  <div class="mr-1 mt-1" id="like-icon-post-<%= @post.id.to_s %>">
-                    <% if @post.liked_by(current_user).present? %>
-                      <%= link_to "いいねを取り消す", post_like_path(@post.id, @post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
-                    <% else %>
-                      <%= link_to "いいね", post_likes_path(@post), method: :POST, remote: true, class: "love hide-text" %>
-                    <% end %>
+                <div class="ml-3 d-flex flex-column">
+                  <h4 class="mb-3" style="font-weight: bold;"><%= @post.title %></h4>
+                  <p class="mb-3" style="font-weight: bold;"><%= @post.content %></p>
+                  <% if @post.post_image.present? %>
+                    <%= image_tag @post.post_image.url, class: "img-fluid", style:"height: 200px; width: auto; object-fit: cover;"%>
+                  <% end %>
+                  <div class="d-flex flex-row">
+                    <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{@post.category.root.name}/#{@post.category.name}" %></li>
+                    <div class="ml-2" id="like-icon-post-<%= @post.id.to_s %>">
+                      <% if @post.liked_by(current_user).present? %>
+                        <%= link_to "いいねを取り消す", post_like_path(@post.id, @post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                      <% else %>
+                        <%= link_to "いいね", post_likes_path(@post), method: :POST, remote: true, class: "love hide-text" %>
+                      <% end %>
+                    </div>
+                    <li class="list-inline-item" style="font-weight: bold;"><%= @post.likes.count %></li>
+                    <li class="list-inline-item"><i class="far fa-comment-alt ml-2"></i></li>
                   </div>
-                  <div class="mt-1" id="like-text-post-<%= @post.id.to_s %>">
-                    <span style="font-weight: bold;"><%= @post.likes.count %></span>
-                  </div>
-                  <li class="list-inline-item"><i class="far fa-comment-alt ml-2 mt-2"></i></li>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
