--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,12 +4,12 @@
     <!-- Content -->
 		<div class="row mt-4">
       <%= render partial: 'mypage/account_menu_mt-0' %>
-			<div class="col-lg-9 col-md-8 col-12">
+			<div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
 				<!-- Card -->
 				<div class="card">
 					<!-- Card header -->
 					<div class="card-header">
-						<h3 class="mb-0">プラン作成</h3>
+						<h3 class="mb-0">経験者に質問する</h3>
 						<p class="mb-0">
 						</p>
 					</div>
@@ -50,7 +50,7 @@
                   <!-- コンテンツ -->
                   <div class="form-group col-12 col-md-12">
                     <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "経験者に質問したいことはなんですか？(500文字以内)", class: "form-label"%>
-                    <%= f.text_area :content, autofocus: true, autocomplete: "experience", rows: "5", class: "form-control", placeholder: "(例)どのくらいの頻度で働いて平均月収どのくらいでしたか？" %>
+                    <%= f.text_area :content, autofocus: true, rows: "5", class: "form-control", placeholder: "(例)どのくらいの頻度で働いて平均月収どのくらいでしたか？" %>
                   </div>
 									<div class="form-group col-12 col-md-12">
 										<div class="actions">
