--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -56,7 +56,7 @@
               <h2>回答<h2>
               <%= link_to "経験者として回答する", new_post_answer_path(@post.id), class: "btn btn-success"%>
             </div>
-            <% @post.answers.each do |answer| %>
+            <% @answers.each do |answer| %>
             <div class="card rounded-lg border mb-4" style="background-color: #f5f5f5;">
               <div class="card-body p-2">
                 <div class="d-flex align-items-center">
@@ -124,6 +124,8 @@
               </div>
             </div>
             <% end %>
+            <%= paginate @answers %>
+            </div>
           </div>
         </div>
       </div>
