--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,8 +42,7 @@
                       <% end %>
                     </div>
                     <li class="list-inline-item" style="font-weight: bold;"><%= @post.likes.count %></li>
-                    <li class="list-inline-item"><i class="far fa-comment-alt ml-2"></i></li>
-                    <li class="list-inline-item" style="font-weight: bold;"><i class="fas fa-gift mr-1"></i><%= "#{@post.answers.count}件" %></li>
+                    <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt mr-1"></i><%= "#{@post.answers.count}件" %></li>
                   </div>
                 </div>
               </div>
@@ -90,8 +89,8 @@
                 <div class="card-body p-2 border-top">
                   <div class="d-flex align-items-center">
                     <div class="col-2 d-flex flex-column justify-content-between align-items-center m-2">
-                      <% if answer.user.profile_image.present? %>
-                        <%= image_tag answer.user.profile_image.url, class: "rounded-circle avatar-sm" %>
+                      <% if comment.user.profile_image.present? %>
+                        <%= image_tag comment.user.profile_image.url, class: "rounded-circle avatar-sm" %>
                       <% else %>
                         <%= image_tag 'profile_default_img_128', class:"rounded-circle avatar-sm" %>
                       <% end %>
@@ -113,7 +112,7 @@
                   <div class="form-group">
                     <div class="field">
                      <%= f.label "300文字以内" %>
-                     <%= f.text_area :content, autofocus: true, autocomplete: "content", rows: "2", class: "form-control" %>
+                     <%= f.text_area :content, autocomplete: "content", rows: "2", class: "form-control" %>
                     </div>
                   </div>
                 </div>
