--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -96,9 +96,19 @@
       <ul class="navbar-nav navbar-right-wrap ml-auto d-none d-lg-block">
         <% if user_signed_in?%>
           <li class="dropdown d-inline-block stopevent">
-            <div class="btn btn-light btn-icon rounded-circle mr-2 text-muted indicator indicator-primary">
-              <i class="fe fe-bell"></i>
-            </div>
+            <% if unchecked_notifications.any? %>
+              <%= link_to notifications_path,data: {"turbolinks" => false} do  %>
+              <div class="btn btn-light btn-icon rounded-circle mr-2 text-muted indicator indicator-primary">
+                <i class="fe fe-bell"></i>
+              </div>
+              <% end %>
+            <% else %>
+              <%= link_to notifications_path,data: {"turbolinks" => false} do  %>
+              <div class="btn btn-light btn-icon rounded-circle mr-2 text-muted">
+                <i class="fe fe-bell"></i>
+              </div>
+              <% end %>
+            <% end %>
           </li>
           <li class="dropdown ml-2 d-inline-block">
             <a class="rounded-circle" href="/" role="button" id="dropdownUserProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
