--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,14 +27,22 @@
       <li class="dropdown ml-2">
         <a class="rounded-circle" href="#!" role="button" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="avatar avatar-md">
-            <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+            <% if current_user.profile_image.url.nil? %>
+              <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+            <% else %>
+              <%= image_tag current_user.profile_image.url, class: "rounded-circle" %>
+            <% end %>
           </div>
         </a>
         <div class="dropdown-menu dropdown-menu-right shadow" aria-labelledby="dropdownUser">
           <div class="dropdown-item">
             <div class="d-flex">
               <div class="avatar avatar-md">
-                <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+                <% if current_user.profile_image.url.nil? %>
+                  <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+                <% else %>
+                  <%= image_tag current_user.profile_image.url, class: "rounded-circle" %>
+                <% end %>
               </div>
               <div class="ml-3 lh-1">
                 <h5 class="mb-1"><%= current_user.name %></h5>
@@ -90,23 +98,20 @@
         <%= link_to "無料登録", new_user_registration_path,data: {"turbolinks" => false}, class: "btn btn-success btn-xs mr-1", style: "width:70px; font-size: 10px;" %>
       <% end %>
     </ul>
+    <div class="d-flex">
+    <ul class="navbar-nav">
+      <a class="nav-link btn" href="/posts" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-lightbulb mr-1"></i>Q&A一覧</span></a>
+    </ul>
+    <ul class="navbar-nav">
+      <a class="nav-link btn ml-2" href="/categories" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="fe fe-search mr-1"></i>カテゴリ</span></a>
+    </ul>
+    <ul class="navbar-nav">
+      <a class="nav-link btn ml-2" href="/posts/new" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-hand-paper mr-1"></i>質問する</span></a>
+    </ul>
+    </div>
     <!-- Button -->
-    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="icon-bar top-bar mt-0"></span>
-      <span class="icon-bar middle-bar"></span>
-      <span class="icon-bar bottom-bar"></span>
-    </button>
     <!-- Collapse -->
     <div class="collapse navbar-collapse" id="navbar-default">
-      <ul class="navbar-nav">
-        <a class="nav-link btn btn-success" style="border-radius: 40px;" href="/posts" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-lightbulb mr-1"></i>Q&A一覧</span></a>
-      </ul>
-      <ul class="navbar-nav">
-        <a class="nav-link btn btn-success ml-2" style="border-radius: 40px;" href="/categories" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="fe fe-search mr-1"></i>カテゴリ</span></a>
-      </ul>
-      <ul class="navbar-nav">
-        <a class="nav-link btn btn-outline-success ml-2" style="border-radius: 40px;" href="/posts/new" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-hand-paper mr-1"></i>質問する</span></a>
-      </ul>
       <ul class="navbar-nav navbar-right-wrap ml-auto d-none d-lg-block">
         <% if user_signed_in?%>
           <li class="dropdown d-inline-block stopevent">
@@ -127,14 +132,22 @@
           <li class="dropdown ml-2 d-inline-block">
             <a class="rounded-circle" href="/" role="button" id="dropdownUserProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <div class="avatar avatar-md">
-                <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+                <% if current_user.profile_image.url.nil? %>
+                  <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+                <% else %>
+                  <%= image_tag current_user.profile_image.url, class: "rounded-circle" %>
+                <% end %>
               </div>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownUserProfile">
               <div class="dropdown-item">
                 <div class="d-flex">
                   <div class="avatar avatar-md">
-                    <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+                    <% if current_user.profile_image.url.nil? %>
+                      <%= image_tag "profile_default_img_128.png", class: "rounded-circle" %>
+                    <% else %>
+                      <%= image_tag current_user.profile_image.url, class: "rounded-circle" %>
+                    <% end %>
                   </div>
                   <div class="ml-3 lh-1">
                     <h5 class="mb-1"><%= current_user.name %></h5>
